populate terminado
